<resources>
    <string name="app_name">RideShare9 for Driver</string>

    <string name="UsernameHint">Username</string>
    <string name="PasswordHint">Password</string>
    <string name="LoginButton">Login</string>
    <string name="ToSignup">Not a member? Join RideShare9 now!</string>

    <string name="remeberme">Remeber me</string>
    <string name="signupname">Enter your Username</string>
    <string name="signuppassword">Enter your Password</string>
    <string name="signuppasswordconfirm">Confirm your Password</string>
    <string name="signuptitle">Signup for Free</string>
    <string name="signupbutton">Register!</string>
    <string name="toLogin">Already a member? login here</string>
    <string name="title_activity_ride_share9">RideShare9</string>
    <string name="title_home">Home</string>
    <string name="title_advertisement">Advertisement</string>
    <string name="title_vehicle">Vehicle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_vehicle">Add Vehicle</string>
    <string name="title_activity_change_vehicle">ChangeVehicle</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="startLocationHint">Your start Location</string>
    <string name="endLocationHint">Your end Location</string>
    <string name="chooseVehicle">Select your vehicle</string>
    <string name="availableSeating">Avaialble Seating</string>
    <string name="finalCostHint">Cost for full trip</string>
    <string name="stopAt_text">Stop At Ottawa</string>
    <string name="costStop_text">For 300 </string>
    <string name="starttime_label">Start time?</string>
    <string name="starttime_first">10:00</string>
    <string name="startdate_label">Start date?</string>
    <string name="startdate_first">01-01-2018</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="cancel_Button">Cancel</string>
    <string name="Trip_title">Title of Your Trip</string>
    <string name="delete">Delete</string>
    <string name="capacity_2_6">Capacity: 2/6</string>
    <string name="start_stop_b_stop_c_final_destination">Start, Stop B, Stop C, Final Destination</string>
    <string name="start_destination">Start Destination</string>
    <string name="final_destination">- Final Destination</string>
    <string name="vehicle_red_honda_civic">Vehicle: Red Honda Civic</string>
    <string name="_10_22_2018">10/22/2018</string>
    <string name="depart_3_29_pm">Depart: 3:29 pm</string>
    <string name="modify">Modify</string>
    <string name="stops">Stops:</string>
    <string name="advertisement_title">Advertisement Title:</string>
    <string name="start_location">start location:</string>
    <string name="title_activity_stepped_add_adv">New Advertisement</string>
    <string name="Starting_Location">Starting Location</string>
</resources>
